# Cinnamon

./: .gitignore  CMakeLists.txt  Gm2700EloGamesSince2000.pgn.7z  README.md  app-ads.txt  cinnamon.js  cinnamon_2.4.js  cute_main_param  indent.xml  index.html  m.index.html  perft.html  regression_test.html  result.txt  result_1f2bde.txt  result_c491f8.txt  test.html  test.md
BitboardCalculator/: Calc.css  index.html
BitboardCalculator/calc/: 0A5F2567819FF094AF3F912C408B7ACE.cache.html  10BBED607EA12A6CFF2D8BB900AD01A9.cache.html  2158D6AC33A5FC39F382DC4D3A4BB722.cache.html  2536381C5DA2A28800FF9BC5D9F1FA3C.cache.html  2A6FF0ED7A9DCC6B3E920A87654E75A2.cache.html  36195F5B2CF844E8A2AF339CD38CFF74.cache.html  386DAFA5AAFC76446C26CD927B0E576C.cache.html  508A9B9158692B18705016F9A066D4A2.cache.html  50E9290D5D3C21EB7B6B9E5FF99882CE.cache.html  691438B57A9F9237AF7DD04FA4655BEC.cache.html  6E55E67FF9C1996B34E15D0444081152.cache.html  970D3B17877CF57FEBF21C64194824DF.cache.html  9D82109BA4B20CF55CAF66B12D34DC4B.cache.html  A128BA92644F0299D7050689ED8FF89B.cache.html  A3E23E4AF4B5AA41D1003CB9E660C659.cache.html  C93931EA3401273B482523DDED767D6C.cache.html  D3394F3B3ECE8FB7408DE648C90BA8AB.cache.html  DBE20733D93B47C35821201FB1FADFCF.cache.html  E306E89FEE5E12CC914568231C4E3708.cache.html  E471496F1D51075F646D9FEEB96AB89C.cache.html  E89578E34411F29E09D7F98E6BEF6F78.cache.html  F04D4AE36A8AE4600DEAA8122261FA50.cache.html  F23E3062EA4E24610E3E3EE04D3CD326.cache.html  FF525F6137B169E2EC3CE8E407E071F7.cache.html  calc.nocache.js
BitboardCalculator/calc/gwt/clean/: clean.css
chessboardjs/: chess.js  chessboard.js
chessboardjs/css/: chessboard.css
css/: core.css
src/: .clang-format  .directory  Bits.cpp  Bits.h  CMakeLists.mingw  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  Endgame.cpp  Endgame.h  Eval.cpp  Eval.h  GTB.cpp  GTB.h  GenMoves.cpp  GenMoves.h  GetOpt.h  Hash.cpp  Hash.h  IterativeDeeping.cpp  IterativeDeeping.h  LICENSE.txt  LINK_ROOKS.inc  Makefile  Makefile.win  Mutex.h  NN.cpp  NN.h  NN_inc.h  ObserverSearch.h  OpenBook.cpp  OpenBook.h  Perft.cpp  Perft.h  README.txt  SYZYGY.cpp  SYZYGY.h  Search.cpp  Search.h  SearchManager.cpp  (+100 more)
src/bitmaps/: inv_raw90.txt  inv_raw90CAPT.txt  inv_raw90MOV.txt  leftCAPT.txt  leftMOV.txt  link_rooks.txt  rightCAPT.txt  rightMOV.txt  rotate90.txt  slide_bitboard_capt.txt  slide_bitboard_capt2.txt  slide_bitboard_mov.txt
src/blockingThreadPool/: Thread.h  ThreadPool.h
src/db/: Endgame.cpp  Endgame.h  GTB.cpp  GTB.h  OpenBook.cpp  OpenBook.h  TB.h  Tablebase.h
src/db/bitbase/: kpk.h
src/db/gaviota/: GTB.cpp  GTB.h
src/db/gaviota/gtb/: gtb-att.c  gtb-att.h  gtb-dec.c  gtb-dec.h  gtb-probe.c  gtb-probe.h  gtb-types.h
src/db/gaviota/gtb/compression/: wrap.c  wrap.h
src/db/gaviota/gtb/compression/lzma/: Alloc.c  Alloc.h  Bra.h  Bra86.c  LzFind.c  LzFind.h  LzFindMt.h  LzHash.h  Lzma86Dec.c  Lzma86Enc.c  Lzma86Enc.h  LzmaDec.c  LzmaDec.h  LzmaEnc.c  LzmaEnc.h  Types.h
src/db/gaviota/gtb/sysport/: sysport.c  sysport.h
src/db/syzygy/: SYZYGY.cpp  SYZYGY.h  main.cpp  tbconfig.h  tbcore.c  tbcore.cpp  tbcore.h  tbprobe.c  tbprobe.cpp  tbprobe.h
src/gtb/: gtb-probe.h
src/js/: Tablebase.h  Uci.h  WrapperCinnamon.h  main.cpp
src/lib/: gtb-probe.h
src/namespaces/: String.h  bits.h  board.cpp  board.h  constants.h  debug.h  def.h  eval.h  move_ordering.inc  random.h  random.inc  see.h
src/network/: Client.cpp  Client.h  Iparser.h  Server.cpp  Server.h
src/network/util/: Network.h
src/perft/: Perft.cpp  Perft.h  PerftServer.cpp  PerftServer.h  PerftThread.cpp  PerftThread.h  RemoteNode.cpp  RemoteNode.h  _TPerftRes.h  perft.ods  perft1.ods  perft2.ods
src/perft/locale/: IResultCallback.h  Perft.cpp  Perft.h  PerftThread.cpp  PerftThread.h  _TPerftRes.h
src/perft/remote/: Message.cpp  Message.h  PerftClient.h  PerftDistributed.cpp  PerftDistributed.h  PerftParser.cpp  PerftParser.h  PerftResultCallback.cpp  PerftResultCallback.h  PerftServer.cpp  PerftServer.h  RemoteNode.cpp  RemoteNode.h
src/syzygy/: main.cpp  tbconfig.h  tbcore.cpp  tbprobe.cpp  tbprobe.h
src/test/: eval.cpp  fileUtil.cpp  gtb.cpp  perft.cpp  perft960.cpp  pin.cpp  search.cpp  see.cpp  spinlock.cpp  spinlockShared.cpp  stalemate.cpp  string.cpp  syzygy.cpp  tablebase.cpp  test.cpp  test.h
src/test/util/: fileUtil.cpp  string.cpp
src/threadPool/: Mutex.h  ObserverThread.h  Spinlock.h  Thread.h  ThreadPool.h
src/util/: Bitboard.cpp  Bitboard.h  BitboardGenerator.cpp  BitboardGenerator.h  BitmapGenerator.cpp  BitmapGenerator.h  Bits.cpp  Bits.h  ConditionVariable.h  CoutSync.h  File.h  FileUtil.h  GetOpt.h  IniFile.cpp  IniFile.h  Mutex.h  ObserverSearch.h  ObserverThread.h  Random.h  SharedMutex.h  Singleton.h  String.cpp  String.h  Thread.h  ThreadPool.h  Time.h  Timer.cpp  Timer.h  getopt.h  logger.h  stacktrace.h  util.h
src/util/bench/: Bench.h  Time.h  Times.h
src/util/tuning/: MseScore.h  Texel.h  Tune.h
